--- a/index.html
+++ b/index.html
@@ -1,6 +1,97 @@
-<html>
-  <body>
-    <h1>Computerman98</h1>
-    <p>Hello World, welcome to my website!</p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tea Cozy Homepage</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+    <header>
+        <!-- logo -->
+        <div>
+            <img class="logo" src="./resources/images/img-tea-cozy-logo.png" alt="Tea Cozy Logo">
+        </div>
+        <div class="navigation">
+            <nav>
+                <ul>
+                    <li>Mission</li>
+                    <li>Featured Tea</li>
+                    <li>Locations</li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <!-- Mission Section -->
+        <section class="mission-container">
+            <div class="mission-statement">
+                <h2>Our Mission</h2>
+                <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small batch, Fair Trade, Organic Tea</h4>
+            </div>
+        </section>
+
+        <!-- Tea of the month section -->
+        <section class="tea-month-container">
+            <h2>Tea of the Month</h2>
+            <h4>What's Sleeping at The tea Cozy</h4>
+            <div class="image-container">
+                <div>
+                    <img class="image-size" src="./resources/images/img-berryblitz.jpg" alt="Picture of berry blitz tea from the top">
+                    <h4 class="tea-month-h4">Fall Berry Blitz Tea</h4>
+                </div>
+                <div>
+                    <img class="image-size" src="./resources/images/img-spiced-rum.jpg" alt="Picture of spiced rum tea in a wooden box">
+                    <h4 class="tea-month-h4">Spiced Rum Tea 
+                    </h4>
+                </div>
+                <div>
+                    <img class="image-size" src="./resources/images/img-donut.jpg" alt="Picture of a donut on a tray">
+                    <h4 class="tea-month-h4">Seasonal Donuts</h4>
+                </div>
+                <div>
+                    <img class="image-size" src="./resources/images/img-myrtle-ave.jpg" alt="Picture of a cup of myrtle ave tea">
+                    <h4 class="tea-month-h4">Myrtle Ave Tea</h4>
+                </div>
+                <div>
+                    <img class="image-size" src="./resources/images/img-bedford-bizarre.jpg" alt="Picture of bedford bizzare tea from the top with a small jar of sugar on the left">
+                    <h4 class="tea-month-h4">Bedford Bizzare Tea</h4>
+                </div>
+            </div>
+        </section>
+
+        <!-- locations section -->
+        <section class="location-container">
+            <h2>Locations</h2>
+            <div class="location-list">
+                <div class="location-info">
+                    <h3>Downtown</h3>
+                    <p>384 West 4th St</p>
+                    <p>Suite 108</p>
+                    <p>Portland, Maine</p>
+                </div>
+                <div class="location-info">
+                    <h3>East Bayside</h3>
+                    <p>3433 Phisherman's Avenue</p>
+                    <p>(Northwest Corner)</p>
+                    <p>Portland, Maine</p>
+                </div>
+                <div class="location-info">
+                    <h3>Oakdale</h3>
+                    <p>515 Crescent Avenue</p>
+                    <p>Second Floor</p>
+                    <p>Portland, Maine</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer-container">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+    </footer>
+    <aside><h5>copyright The Tea Cozy 2017</h5></aside>
+</body>
 </html>
